RESOLVED FIXED298384
REGRESSION(299123@main): Frequent web process terminations (message check RemoteGraphicsContext_ClipToImageBuffer)
https://bugs.webkit.org/show_bug.cgi?id=298384
Summary REGRESSION(299123@main): Frequent web process terminations (message check Rem...
Kimmo Kinnunen
Reported 2025-09-04 04:14:03 PDT
MESSAGE_CHECK failure at RemoteGraphicsContext::clipToImageBuffer
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-04 04:15:50 PDT
Kimmo Kinnunen
Comment 2 2025-09-04 04:16:23 PDT
Kimmo Kinnunen
Comment 3 2025-09-04 04:21:19 PDT
Kimmo Kinnunen
Comment 4 2025-09-05 09:33:47 PDT
EWS
Comment 5 2025-09-05 09:48:38 PDT
Committed 299629@main (1166ee18cc27): <https://commits.webkit.org/299629@main> Reviewed commits have been landed. Closing PR #50365 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.