REGRESSION(299123@main): Frequent web process terminations (message check RemoteGraphicsContext_ClipToImageBuffer) https://bugs.webkit.org/show_bug.cgi?id=298384 rdar://159388928

Reviewed by NOBODY (OOPS!).

Clipping to WCP-local ImageBuffers would fail the "recordResourceUse"
phase but still continue sending the ClipToImageBuffer message.
Fix by using the pattern of delegating to the
GraphicsContext::clipToImageBuffer, which takes the (local) NativeImage
and applies the added clipToNativeImage.

Later on when remote NativeImages are added, clipToImageBuffer will
be removed.

* Source/WebCore/platform/graphics/BifurcatedGraphicsContext.cpp:
(WebCore::BifurcatedGraphicsContext::clipToNativeImage):
* Source/WebCore/platform/graphics/BifurcatedGraphicsContext.h:
* Source/WebCore/platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::clipToImageBuffer):
* Source/WebCore/platform/graphics/GraphicsContext.h:
* Source/WebCore/platform/graphics/NullGraphicsContext.h:
* Source/WebCore/platform/graphics/cairo/CairoOperationRecorder.cpp:
(WebCore::Cairo::OperationRecorder::clipToNativeImage):
(WebCore::Cairo::OperationRecorder::clipToImageBuffer): Deleted.
* Source/WebCore/platform/graphics/cairo/CairoOperationRecorder.h:
* Source/WebCore/platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::fillShadowBuffer):
(WebCore::Cairo::clipToNativeImage):
(WebCore::Cairo::clipToImageBuffer): Deleted.
* Source/WebCore/platform/graphics/cairo/CairoOperations.h:
* Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContextCairo::clipToNativeImage):
(WebCore::GraphicsContextCairo::clipToImageBuffer): Deleted.
* Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.h:
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::clipToNativeImage):
(WebCore::GraphicsContextCG::clipToImageBuffer): Deleted.
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.h:
* Source/WebCore/platform/graphics/displaylists/DisplayListItem.h:
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::ClipToImageBuffer::dump const):
(WebCore::DisplayList::ClipToNativeImage::apply const):
(WebCore::DisplayList::ClipToNativeImage::dump const):
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:
(WebCore::DisplayList::ClipToNativeImage::ClipToNativeImage):
(WebCore::DisplayList::ClipToNativeImage::image const):
(WebCore::DisplayList::ClipToNativeImage::destinationRect const):
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::updateStateForClipToNativeImage):
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.h:
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.cpp:
(WebCore::DisplayList::RecorderImpl::clipToNativeImage):
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.h:
* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::clipToNativeImage):
(WebCore::GraphicsContextSkia::clipToImageBuffer): Deleted.
* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.h:
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContext.cpp:
(WebKit::RemoteGraphicsContext::clipToNativeImage):
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContext.h:
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContext.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextProxy.cpp:
(WebKit::RemoteGraphicsContextProxy::clipToImageBuffer):
(WebKit::RemoteGraphicsContextProxy::clipToNativeImage):
(WebKit::RemoteGraphicsContextProxy::recordResourceUse):
* Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextProxy.h: