Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.h
@@ -101,7 +101,7 @@ public:
     void clipOut(const Path&) final;
     void clipPath(const Path&, WindRule) final;
     IntRect clipBounds() const final;
-    void clipToImageBuffer(ImageBuffer&, const FloatRect&) final;
+    void clipToNativeImage(const NativeImage&, const FloatRect&) final;
     
     RenderingMode renderingMode() const final;
 
