Source/WebCore/platform/graphics/displaylists/DisplayListItem.h
@@ -50,6 +50,7 @@ class ClipOutRoundedRect;
 class ClipOutToPath;
 class ClipPath;
 class ClipToImageBuffer;
+class ClipToNativeImage;
 class ConcatenateCTM;
 class DrawControlPart;
 class DrawDotsForDocumentMarker;
@@ -116,6 +117,7 @@ using Item = Variant
     , ClipOutToPath
     , ClipPath
     , ClipToImageBuffer
+    , ClipToNativeImage
     , ConcatenateCTM
     , DrawControlPart
     , DrawDotsForDocumentMarker
