Source/WebKit/GPUProcess/graphics/RemoteGraphicsContext.cpp
@@ -318,7 +318,12 @@ void RemoteGraphicsContext::clipOutRoundedRect(const FloatRoundedRect& rect)
 void RemoteGraphicsContext::clipToImageBuffer(RenderingResourceIdentifier imageBufferIdentifier, const FloatRect& destinationRect)
 {
     RefPtr clipImage = imageBuffer(imageBufferIdentifier);
-    MESSAGE_CHECK(clipImage);
+    if (!clipImage) {
+        ASSERT_NOT_REACHED();
+        // FIXME: https://bugs.webkit.org/show_bug.cgi?id=298384
+        // Switch to MESSAGE_CHECK(clipImage) when root cause is clear.
+        return;
+    }
     context().clipToImageBuffer(*clipImage, destinationRect);
 }
 
